--- a/src/main/resources/public/skin/call.css
+++ b/src/main/resources/public/skin/call.css
@@ -7,5 +7,112 @@ body {
   min-height: 100vh;
   padding: 0;
   margin: 0;
-  overflow: hidden; 
+  overflow: hidden;
+}
+
+#loader {
+  position: fixed;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: radial-gradient(50% 50% at 50% 50%, #2a3a4b 20.83%, #1e2a36 100%); z-index : 2;
+  cursor: pointer;
+  z-index: 2;
+}
+
+#loader .content {
+  color: white;
+  width: 35%;
+  margin: 0 auto;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: Helvetica, arial, sans-serif;
+}
+
+#loader .content .label {
+  font-size: 36px;
+}
+
+#loader .content .room {
+  font-size: 24px;
+}
+
+#loader .logo {
+  width: 200px;
+  height: 200px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 20px auto;
+  border-radius: 50%;
+}
+
+#loader .mini-loader-container {
+  margin-top: 50px;
+  font-size: 18px;
+}
+
+#loader .mini-loader,
+#loader .mini-loader:before,
+#loader .mini-loader:after {
+  border-radius: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation: load7 1.8s infinite ease-in-out;
+  animation: load7 1.8s infinite ease-in-out;
+}
+#loader .mini-loader {
+  color: #ffffff;
+  font-size: 8px;
+  margin: 0 auto;
+  position: relative;
+  text-indent: -9999em;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+#loader .mini-loader:before,
+#loader .mini-loader:after {
+  content: '';
+  position: absolute;
+  top: 0;
+}
+#loader .mini-loader:before {
+  left: -3.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+#loader .mini-loader:after {
+  left: 3.5em;
+}
+@-webkit-keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
+}
+@keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
 }
