--- a/src/main/resources/templates/call.html
+++ b/src/main/resources/templates/call.html
@@ -10,10 +10,19 @@
 <script type="text/javascript" data-main="call" src="../js/require.js"></script>
 </head>
 <body>
+  <div id="loader">
+    <div class="content">
+      <span class="label"></span>
+      <div class="logo"></div>
+      <div class="room"></div>
+      <div class="mini-loader-container">
+        <span class="mini-loader-label">Loading...</span>
+        <div class="mini-loader"></div>
+      </div>
+
+    </div>
+  </div>
   <div id="app"></div>
-  <script>
-      
-    </script>
   <script src="../jitsi/js/jitsi-app.bundle.js"></script>
 </body>
 </html>
