--- a/src/main/resources/templates/call.html
+++ b/src/main/resources/templates/call.html
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../skin/call.css">
+<link rel="icon" href="../images/favicon.ico" type="image/x-icon">
 <script id="jitsi-api" th:src="${appUrl} + '/external_api.js'"></script>
 <script type="text/javascript" src="../js/common.js"></script>
 <script type="text/javascript" data-main="call" src="../js/require.js"></script>
