Init Vue module as AMD, fixed name

--- a/src/main/resources/templates/call.html
+++ b/src/main/resources/templates/call.html
@@ -20,10 +20,11 @@
         <span class="mini-loader-label">Loading...</span>
         <div class="mini-loader"></div>
       </div>
-
     </div>
   </div>
+  <!-- div class="invite-popup">
+    <input id="invite-link" type="text" size="80">
+  </div -->
   <div id="app"></div>
-  <script src="../jitsi/js/jitsi-app.bundle.js"></script>
 </body>
 </html>
