Add signin popup

--- a/src/main/resources/templates/call.html
+++ b/src/main/resources/templates/call.html
@@ -25,10 +25,8 @@
       </div>
     </div>
   </div>
-  <!-- div class="invite-popup">
-    <input id="invite-link" type="text" size="80">
-  </div -->
+  <div id="signin-popup"></div>
   <div id="app"></div>
   <div id="invite-popup"></div>
-</body>
+</body> 
 </html>
