Changed link for material icons

--- a/src/main/resources/templates/call.html
+++ b/src/main/resources/templates/call.html
@@ -6,7 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../skin/call.css">
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
-<link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
+<!-- <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet"> -->
+<link href="/eXoSkin/skin/css/vuetify/vuetify-all.css" rel="stylesheet">
 <script id="jitsi-api" th:src="${appUrl} + '/external_api.js'"></script>
 <script type="text/javascript" src="../js/common.js"></script>
 <script type="text/javascript" data-main="call" src="../js/require.js"></script>
