--- a/src/main/resources/templates/call.html
+++ b/src/main/resources/templates/call.html
@@ -4,9 +4,12 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link type="text/css" rel="stylesheet" href="../../frontend/eXoskin/skin/css/Core.css">
 <link rel="stylesheet" type="text/css" href="../skin/call.css">
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
+<!-- <link rel="icon" href="../images/logo.png" type="image/x-icon"> -->
 <!-- <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet"> -->
+<link href="/eXoSkin/skin/css/Core.css" rel="stylesheet">
 <link href="/eXoSkin/skin/css/vuetify/vuetify-all.css" rel="stylesheet">
 <script id="jitsi-api" th:src="${appUrl} + '/external_api.js'"></script>
 <script type="text/javascript" src="../js/common.js"></script>
@@ -16,7 +19,7 @@
 <body>
   <div id="loader">
     <div class="content">
-      <span class="label"></span>
+      <span class="label" style="background-color: transparent !important; border: none;"></span>
       <div class="logo"></div>
       <div class="room"></div>
       <div class="mini-loader-container">
