Add eXo logo on sign in  page

--- a/src/main/resources/templates/call.html
+++ b/src/main/resources/templates/call.html
@@ -7,7 +7,7 @@
 <link type="text/css" rel="stylesheet" href="../../frontend/eXoskin/skin/css/Core.css">
 <link rel="stylesheet" type="text/css" href="../skin/call.css">
 <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
-<!-- <link rel="icon" href="../images/logo.png" type="image/x-icon"> -->
+<link as="image" rel="preload" href="../images/logo.png" type="image/png">
 <!-- <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet"> -->
 <link href="/eXoSkin/skin/css/Core.css" rel="stylesheet">
 <link href="/eXoSkin/skin/css/vuetify/vuetify-all.css" rel="stylesheet">
