--- a/src/main/resources/templates/call.html
+++ b/src/main/resources/templates/call.html
@@ -31,5 +31,6 @@
   <div id="signin-popup"></div>
   <div id="app"></div>
   <div id="invite-popup"></div>
+  <div id="exit-screen"></div>
 </body> 
 </html>
