Try to fix the error: [Vuetify] Multiple instances of Vue detected

--- a/src/main/resources/templates/call.html
+++ b/src/main/resources/templates/call.html
@@ -28,9 +28,9 @@
       </div>
     </div>
   </div>
-  <div id="signin-popup"></div>
-  <div id="app"></div>
-  <div id="invite-popup"></div>
-  <div id="exit-screen"></div>
+  <div id="signin-popup-container"></div>
+  <div id="app-container"></div>
+  <div id="invite-popup-container"></div>
+  <div id="exit-screen-container"></div>
 </body> 
 </html>
