--- a/src/main/resources/public/skin/call.css
+++ b/src/main/resources/public/skin/call.css
@@ -42,6 +42,7 @@ body {
 
 #loader .content .label {
   font-size: 36px;
+  transform: translate(-74px, -20px);
 }
 
 #loader .content .room {
@@ -56,6 +57,7 @@ body {
   background-repeat: no-repeat;
   margin: 20px auto;
   border-radius: 50%;
+  transform: translate(-35px, -20px);
 }
 
 #loader .mini-loader-container {
