--- a/src/main/resources/public/skin/call.css
+++ b/src/main/resources/public/skin/call.css
@@ -124,12 +124,11 @@ body {
 @media only screen and (min-width: 360px) and (max-width: 480px) {
   /* CSS that applies for only mobile devices*/
   #loader .content .label {
-      font-size: 36px;
-      transform:translate(-74px, -20px)
+    margin-left:-60px;
 
 }
   #loader .logo {
-    transform:translate(-35px, -20px)
+    margin-left:-30px;
   }
 }
 
