--- a/src/main/resources/public/skin/call.css
+++ b/src/main/resources/public/skin/call.css
@@ -3,35 +3,14 @@
   height: 100%;
 }
 
-body {
-  min-height: 100vh;
-  padding: 0;
-  margin: 0;
-  overflow: hidden;
-}
-
 #loader {
-  position: fixed;
-  display: block;
   width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   background: radial-gradient(50% 50% at 50% 50%, #2a3a4b 20.83%, #1e2a36 100%); z-index : 2;
-  cursor: pointer;
-  z-index: 2;
-}
-
-.invite-popup {
-  position: fixed;
 }
 
 #loader .content {
   color: white;
-  width: 35%;
-  margin: 0 auto;
   text-align: center;
   position: absolute;
   top: 50%;
@@ -57,6 +36,8 @@ body {
   margin: 20px auto;
   border-radius: 50%;
 }
+
+/* loading animation*/
 
 #loader .mini-loader-container {
   margin-top: 50px;
@@ -120,15 +101,3 @@ body {
     box-shadow: 0 2.5em 0 0;
   }
 }
-
-@media only screen and (min-width: 360px) and (max-width: 480px) {
-  /* CSS that applies for only mobile devices*/
-  #loader .content .label {
-    margin-left:-60px;
-
-}
-  #loader .logo {
-    margin-left:-30px;
-  }
-}
-
