--- a/src/main/frontend/skin/less/variables.less
+++ b/src/main/frontend/skin/less/variables.less
@@ -62,5 +62,5 @@
 @scrollSecondaryThumbColor: #ced2d5;
 
 // blockquote 
-@quoteBarColor: #A8B3C5;
+@quoteBarColor: #5f708a;
 @quoteTextColor: @grayLight;
