Task-55805: [Accessibility - Contrast - 3.2] Change the default primary color

--- a/src/main/frontend/skin/less/webconferencing-admin.less
+++ b/src/main/frontend/skin/less/webconferencing-admin.less
@@ -61,7 +61,7 @@
 
 .switch input:checked + .slider:before {
 	transform: translateX(18px);
-	background: #578dc9;
+	background: #476A9C;
 }
 
 /**/
